# Falling-Blocks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: block.h  block_basket.h  constants.h  dashboard.h  enum_names.h  game_grid.h  game_handler.h  global_states.h  input_handler.h  menu.h  score.h  simple_encryption.h  speed_level.h  text.h
lib/Allegro/: display.h  event_queue.h  font.h  timer.h
lib/Allegro/source/: display.cpp  event_queue.cpp  font.cpp  timer.cpp
lib/dashboard/: small_blocks_visuals.h
res/data/: hs.data
res/text/: credits.txt
